syntax = "proto3";

option csharp_namespace = "GrpcExcel";

package grpcexcel;

message Empty {
}

message DateTime {
	int32 year = 2;
	int32 month = 3;
	int32 day = 4;
	int32 hour = 5;
	int32 minute = 6;
	int32 second = 7;
}

message HandlerRq {
	string handler = 1;
	bool saveIt = 2;
}

message OneCellValue {
	enum ValueType {
		NULL = 0;
		STRING = 1;
		DATETIME = 2;
		DECIMAL = 3;
		BOOL = 4;
		INT = 5;
		DOUBLE = 6;
	}

	ValueType type = 1;
	double doubleVal = 2;
	string strVal = 3;
	DateTime dateVal = 4;
	bool boolVal = 5;
	int64 intVal = 6;

	string format = 7;
}

message NamedRange {
	string name = 1;
	repeated OneCellValue vals = 2;
	
	int32 countCols = 3;
}

message NamedCellsResp {
	int32 Count = 1;
	repeated NamedRange names = 2;
	bool isOk = 3;
	string errMsg = 4;
}

message CellsResp {
	int32 Count = 1;
	repeated NamedRange names = 2;
	bool isOk = 3;
	string errMsg = 4;
}

message GetNamedCellsRq {
	string handler = 1;
	repeated string names = 2;
}
message GetCellsRq {
	string handler = 1;
	string sheet = 2;

	string begin = 3;
	string end = 4;
}

message GetRangesRq {
	string handler = 1;
	string sheet = 2;
	repeated string names = 3;
}

message UploadRq {
	string name = 1;
	bytes bytes = 2;
}

message UploadResp {
	string handler = 1;
	bool isOk = 2;
	string errMsg = 3;
}

message DownloadRq {
	string handler = 1;
	string modelFile = 2;
}

message DownloadResp {
	string bytes = 1;
	string filename = 2;
	bool isOk = 3;
	string errMsg = 4;
}

message ListResp {
	repeated string filename = 1;
	bool isOk = 2;
	string errMsg = 3;
}

message SetSetValuesRq {
	string handler = 1;
	repeated NamedRange ranges = 2;
}

message OpenRq {
	string filename = 1;
	string handler = 2;
	bool withSheets = 3;
}

message ExcelSheet {
	string name = 1;
	int32 maxRow = 2;
	int32 maxCol = 3;
}

message OpenResp {
	string handler = 1;
	bool isOk = 2;
	string errMsg = 3;
	repeated ExcelSheet sheets = 4;
}

message MacroNameRq {
	string handler = 1;
	string name = 2;
}

message ListMacrosRq {
	string handler = 1;
	repeated string macroNames = 2;
}

message ListMacrosResp {
	repeated string macroNames = 1;
	bool isOk = 2;
	string errMsg = 3;
}

message StatusResp {
	 bool isOk = 1;
	 string errMsg = 2;
}

message VMData {
	bool inScaleSet = 1;
	string vmName = 2;
	repeated string vmIP = 3;
	int32 status = 4; // 0=PROVISIONNING, 1=RUNNING, -1=DISCONNECTED
	DateTime datetime = 5;
	float cpu = 6;
	string errMsg = 7;
}


message ListVMResp {
	repeated VMData vmData = 1;
	bool isOk = 2;
	string errMsg = 3;
}

message ScaleRq {
	int32 numberOfVM = 1;
	bool isOk = 2;
	string errMsg = 3;
}

message ReportingRq {
	string vmName = 1;
	int32 NBInstanceRunning = 2;
	int32 NBInstanceCreatedToday = 3;
	DateTime DateTime = 4;
	DateTime Started = 5;
}

message ReportingResp {
	repeated ReportingRq reportingVM = 1;
	bool isOk = 2;
	string errMsg = 3;
}

service ExcelService {
	rpc Ping (HandlerRq) returns (StatusResp);
	rpc Upload(UploadRq) returns (UploadResp);
	rpc Download(DownloadRq) returns (DownloadResp);

	
	rpc List(Empty) returns (ListResp);
	
	rpc Open(OpenRq) returns (OpenResp);
	rpc Close(HandlerRq) returns (StatusResp);

	rpc GetNamedCells (GetNamedCellsRq) returns (NamedCellsResp);
	rpc GetCells (GetCellsRq) returns (CellsResp);
	rpc SetValues (SetSetValuesRq) returns (StatusResp);

	rpc GetMacroNames(ListMacrosRq) returns (ListMacrosResp);
	rpc RunMacro(MacroNameRq) returns (StatusResp);


}

service ClusterGRPCService {
	rpc GetVMList(Empty) returns (ListVMResp);
	rpc RegisterVM(VMData) returns (StatusResp);
	rpc SendReporting(ReportingRq) returns (StatusResp);
	rpc GetAllVmReporting(Empty) returns (ReportingResp);
	
}
